# futarchy

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  RUN_INSTRUCTIONS.md  justfile  package-lock.json  package.json  run.sh  test.sh  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/: generate-verified.yaml
.github/actions/generate-verified/: action.yaml
.github/workflows/: anchor-test.yaml  deploy-buffer.yaml  generate-verifiable-builds.yaml  verify-build.yaml
app/: package.json
app/src/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  InstructionHandler.ts  constants.ts  index.ts
app/src/idl/: amm.json  autocrat.json  autocrat_migrator.json  autocrat_v0.json  (+1 more)
docs/: LANGS.md  README.md  REAMDME.md  SUMMARY.md  add_language.sh  book.json  conditional_vault_accounts.puml  languages.sh
docs/en/: SUMMARY.md  en_string.json  en_strings.json
docs/es/: README.md  SUMMARY.md  book.json
docs/fr/: SUMMARY.md  book.json
docs/futarchy/: benefits.md  drawbacks.md  eli5.md  overview.md
docs/gitbook-plugin-language-dropdown/: index.js  package.json
docs/implementation/: price-oracle.md  program-architecture.md  twap-oracle.md
docs/it/: README.md  SUMMARY.md  book.json
docs/ja/: README.md  SUMMARY.md  book.json
docs/keys/: README.md  SUMMARY.md
docs/metadao/: faq.md  meta.md
docs/pt-br/: README.md  SUMMARY.md  book.json
docs/ru/: README.md  SUMMARY.md  book.json
docs/tr/: README.md  SUMMARY.md  book.json
docs/translation_scripts/: REAMDME.md  add_language.sh  genTranslatedDocs.sh  generate_translated_docs.sh  getTranslations.py  gpt_translator.py  languages.csv  setLanguages.sh
docs/using-atrium/: creating-a-dao.md  creating-proposals.md  trading-proposals.md
docs/using-the-platform/: creating-a-dao.md  creating-proposals.md  trading-proposals.md
docs/vi/: README.md  SUMMARY.md  book.json
docs/zh-cn/: README.md  SUMMARY.md  book.json  zh-cn_string.json  zh-cn_strings.json
futarchy-ts/: package.json  tsconfig.json
futarchy-ts/src/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  constants.ts
gitbook-plugin-language-dropdown/: package.json
gitbook-plugin-language-dropdown/assets/: language-dropdown.css
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  events.rs  lib.rs  tests.rs
programs/amm/src/instructions/: add_liquidity.rs  common.rs  crank_that_twap.rs  create_amm.rs  create_position.rs  mod.rs  remove_liquidity.rs  swap.rs  update_ltwap.rs
programs/amm/src/state/: amm.rs  amm_position.rs  mod.rs
programs/amm/src/utils/: anchor_decimal.rs  mod.rs  seeds.rs  token.rs
programs/autocrat/: Cargo.toml
programs/autocrat/src/: context.rs  error.rs  error_code.rs  lib.rs  state.rs
programs/autocrat/src/instructions/: execute_proposal.rs  finalize_proposal.rs  initialize_dao.rs  initialize_proposal.rs  mod.rs  update_dao.rs
programs/autocrat/src/state/: dao.rs  mod.rs  proposal.rs
programs/autocrat_migrator/: Cargo.toml
programs/autocrat_migrator/src/: lib.rs
programs/autocrat_v0/: Cargo.toml
programs/autocrat_v0/src/: lib.rs
programs/autocrat_v1/: Cargo.toml
programs/autocrat_v1/src/: context.rs  lib.rs  state.rs
programs/clob/: Cargo.toml
programs/clob/src/: error.rs  ix.rs  lib.rs
programs/clob/src/state/: free_bitmap.rs  global_state.rs  mod.rs  order_book.rs  side.rs
programs/conditional_vault/: Cargo.toml
programs/conditional_vault/src/: context.rs  error.rs  error_code.rs  events.rs  lib.rs  state.rs
programs/conditional_vault/src/instructions/: add_metadata_to_conditional_tokens.rs  common.rs  initialize_conditional_vault.rs  initialize_new_conditional_vault.rs  initialize_question.rs  merge_conditional_tokens.rs  merge_tokens.rs  mint_conditional_tokens.rs  mod.rs  new_common.rs  redeem_conditional_tokens_for_underlying_tokens.rs  redeem_tokens.rs  resolve_question.rs  settle_conditional_vault.rs  split_tokens.rs
programs/conditional_vault/src/state/: conditional_vault.rs  mod.rs  question.rs
programs/metaDAO/: Cargo.toml
programs/meta_dao/: Cargo.toml
programs/meta_dao/src/: context.rs  error_code.rs  lib.rs  state.rs
programs/metadata/: Cargo.toml
programs/optimistic_timelock/: Cargo.toml
programs/optimistic_timelock/src/: lib.rs
programs/raydium_twap/: Cargo.toml
programs/raydium_twap/src/: lib.rs
programs/timelock/: Cargo.toml
programs/timelock/src/: lib.rs
scripts/: addV03Metadata.ts  airdrop.ts  attachMetadata.ts  autocratV0.ts  clob.ts  clockworkTwap.ts  consts.ts  crank.ts  crankTwap.ts  finalizeProposal.ts  initializeDao.ts  initializeProposal.ts  initializeProposalAndMarkets.ts  initializeVault.ts  main.ts  mergeTokens.ts  metadata-devnet.ts  multisig.ts  placeOrder.ts  reclaimTokens.ts  sendTokens.ts  setupDevnet.ts  uploadMetadata.ts  uploadOffchainMetadata.ts
scripts/.config/: metadata.json
scripts/assets/: fDRIFT.json
scripts/helpers/: shadowProvider.ts  test.mjs
sdk/: package.json  tsconfig.json
sdk/src/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  TimelockClient.ts  constants.ts  index.ts
tests/: accountInitializationUtils.ts  accountInitializer.ts  amm.ts  autocrat.ts  autocratV0.ts  autocrat_v1.ts  bankrunUtils.ts  clob.json  clob.ts  conditionalVault.ts  declarationOfIndependenceOfCyberspace.ts  main.test.ts  metaDAO.ts  metadata.ts  migrator.ts  pdaGenerationUtils.ts  pdaGenerator.ts  programFacade.ts  raydiumTwap.ts  testUtils.ts  timelock.ts  utils.ts
tests/amm/: amm.ts  main.test.ts
tests/autocrat/: autocrat.ts  main.test.ts
tests/autocratMigrator/: migrator.ts
tests/conditionalVault/: conditionalVault.ts  main.test.ts  unit.ts
tests/fixtures/: amm_v3.json  amm_v3.ts  openbook_twap.json  openbook_twap.ts
tests/integration/: mintAndSwap.test.ts  scalarMarkets.test.ts
tests/optimisticTimelock/: timelock.ts
tests/programs/: migrator.ts  timelock.ts
tests/utils/: bankrunUtils.ts  pdaGenerator.ts  programFacade.ts  testUtils.ts  utils.ts
token/: dark-metadata.json  devnet-usdc-metadata.json  drift-metadata.json  metadata.json  ore-metadata.json
(+167 files in other folders)
