[package]
name = "autocrat"
version = "1.0.0"
description = "SVM-based program for running futarchy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autocrat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.28.0"
anchor-spl = "^0.28.0"
solana-security-txt = "1.1.1"
openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2.git", features = ["cpi"] }
openbook-twap = { git = "https://github.com/metaDAOproject/openbook-twap.git", features = ["cpi"] }
solana-program = "~1.16.1"
conditional_vault = { path = "../conditional_vault", features = ["cpi"] }
