[package]
name = "autocrat"
version = "1.0.0"
description = "SVM-based program for running futarchy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autocrat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.28.0"
anchor-spl = "^0.28.0"
solana-security-txt = "1.1.1"
solana-program = "~1.16.1"
conditional_vault = { path = "../conditional_vault", features = ["cpi"] }
amm = { path = "../amm", features = ["cpi"] }
