[package]
name = "autocrat"
version = "0.4.0"
description = "SVM-based program for running futarchy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autocrat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.29.0"
anchor-spl = "^0.29.0"
solana-security-txt = "1.1.1"
conditional_vault = { path = "../conditional_vault", features = ["cpi"] }
amm = { path = "../amm", features = ["cpi"] }
