[package]
name = "conditional-vault"
version = "0.1.0"
description = "Allows users to mint and burn conditional tokens that are tied to improvement proposals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conditional_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
