[package]
name = "conditional_vault"
version = "1.0.0"
description = "SVM-based program for minting conditional tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conditional_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata"] }
mpl-token-metadata = { version = "^1.6.5", features = ["no-entrypoint"] }
solana-program = "1.16.1"
solana-security-txt = "1.1.1"
