[package]
name = "conditional_vault"
version = "0.3.0"
description = "SVM-based program for minting conditional tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "conditional_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
solana-security-txt = "1.1.1"
