[package]
name = "meta-dao"
version = "0.1.0"
description = "Allows users to mint and burn conditional tokens that are tied to improvement proposals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meta_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
