[package]
name = "raydium_twap"
version = "0.1.0"
description = "A manipulation-resistant TWAP oracle, built on Raydium's CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_twap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", rev = "da57b0b7409f5a4437feb8fd0551683b14b8a1f5", features = ["cpi"] }